--- a/jslint.conf
+++ b/jslint.conf
@@ -22,7 +22,7 @@
 +unreachable_code             # unreachable code
 -missing_break                # missing break statement
 -missing_break_for_last_case  # missing break statement for last case in switch
-+comparison_type_conv         # comparisons against null, 0, true, false, or an empty string allowing implicit type conversion (use === or !==)
+-comparison_type_conv         # comparisons against null, 0, true, false, or an empty string allowing implicit type conversion (use === or !==)
 -inc_dec_within_stmt          # increment (++) and decrement (--) operators used as part of greater statement
 +useless_void                 # use of the void type may be unnecessary (void is always undefined)
 +multiple_plus_minus          # unknown order of operations for successive plus (e.g. x+++y) or minus (e.g. x---y) signs
@@ -48,7 +48,7 @@
 +jsl_cc_not_understood        # couldn't understand control comment using /*jsl:keyword*/ syntax
 +useless_comparison           # useless comparison; comparing identical expressions
 +with_statement               # with statement hides undeclared variables; use temporary variable instead
-+trailing_comma_in_array      # extra comma is not recommended in array initializers
+-trailing_comma_in_array      # extra comma is not recommended in array initializers
 +assign_to_function_call      # assignment to a function call
 +parseint_missing_radix       # parseInt missing radix parameter
 
